[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/Skeleton/monsterScreamSound.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Skeleton/monster_front_right_leg.png" type="Texture" id=11]
[ext_resource path="res://Entities/Skeleton/monster_front_idle1.png" type="Texture" id=15]
[ext_resource path="res://Entities/Skeleton/Skeleton.gd" type="Script" id=17]
[ext_resource path="res://Entities/Skeleton/monster_front_left_leg.png" type="Texture" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "down_idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 11 ) ],
"loop": true,
"name": "down_walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "left_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 11 ) ],
"loop": true,
"name": "left_walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "right_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 11 ) ],
"loop": true,
"name": "right_walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "up_idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 11 ) ],
"loop": true,
"name": "up_walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 32 )

[node name="Skeleton" type="KinematicBody2D"]
script = ExtResource( 17 )

[node name="AudioStreamPlayer" parent="." instance=ExtResource( 1 )]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.04, 0.04 )
z_index = 1
frames = SubResource( 1 )
animation = "down_idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="cooldownScream" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="cooldownScream" to="." method="_on_cooldownScream_timeout"]
